--- a/ws2812b_stm32f103c8t6_v03.ioc
+++ b/ws2812b_stm32f103c8t6_v03.ioc
@@ -5,10 +5,10 @@ Dma.TIM3_CH1/TRIG.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM3_CH1/TRIG.0.Instance=DMA1_Channel6
 Dma.TIM3_CH1/TRIG.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.TIM3_CH1/TRIG.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM3_CH1/TRIG.0.Mode=DMA_NORMAL
+Dma.TIM3_CH1/TRIG.0.Mode=DMA_CIRCULAR
 Dma.TIM3_CH1/TRIG.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.TIM3_CH1/TRIG.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM3_CH1/TRIG.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH1/TRIG.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.TIM3_CH1/TRIG.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
